# serde_nbt

./: .gitattributes  Cargo.toml  README.md
examples/: player.rs  print_tree.rs
src/: de.rs  error.rs  lib.rs  nbt.rs  ser.rs
src/nbt/: parser.rs
