[package]
name = "serde_nbt"
version = "0.1.0"
authors = ["Andrew Fuchs <andrew-fuchs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
log = "0.4"
serde = "1"

[dev-dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
